--- a/ghc-repro.cabal
+++ b/ghc-repro.cabal
@@ -11,8 +11,8 @@ build-type:          Simple
 cabal-version:       >=1.10
 extra-source-files:  README.md
 
-library ghc-repro
+library
   hs-source-dirs:      src
-  main-is:             Main.hs
   default-language:    Haskell2010
+  exposed-modules:     Main
   build-depends:       base >= 4.7 && < 5
